--- a/統計學息01.ipynb
+++ b/統計學息01.ipynb
@@ -9,6 +9,23 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/codeintern16/0.0/blob/main/%E7%B5%B1%E8%A8%88%E5%AD%B8%E6%81%AF01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from matplotlib.pyplot import subplots\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.stats.outliers_influence \\\n",
+        "import variance_inflation_factor as VIF\n",
+        "from statsmodels.stats.anova import anova_lm"
+      ],
+      "metadata": {
+        "id": "87gEutKbcilf"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ],
   "metadata": {
